--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -12,24 +12,27 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.6.2",
     "expo": "^54.0.20",
     "expo-camera": "~17.0.8",
     "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.1.7",
-    "react-native-vector-icons": "^10.0.2",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "13.15.0",
     "zustand": "^4.4.7"
   },
